Agregando contenido a la sección de noticias y eventos.

--- a/eventos.html
+++ b/eventos.html
@@ -47,6 +47,31 @@
       </nav>
       <hr />
       <h1 class="text-center">EVENTOS DEV</h1>
+      <div class="box-article" id="internetarchive">
+        <img
+          src="img/devfestportada.webp"
+          alt="DevFest Huancayo 2024"
+          class="article-image"
+        />
+        <h3 class="article-title">DevFest Huancayo 2024</h3>
+        <p class="article-description">
+          DevFest Huancayo es el encuentro tecnológico más esperado del año,
+          organizado por la comunidad Google Developer Group (GDG) de Huancayo.
+          En este evento, tendrás la oportunidad de sumergirte en las últimas
+          novedades del mundo del desarrollo y las tecnologías emergentes, todo
+          bajo el paraguas de las soluciones y plataformas de Google. Ya seas un
+          desarrollador experimentado, un estudiante con pasión por la
+          tecnología o un emprendedor buscando inspiración, DevFest Huancayo es
+          el lugar para ti. Con una combinación de charlas magistrales, talleres
+          prácticos y espacios para networking, podrás conectar con
+          profesionales del sector, compartir ideas y expandir tus horizontes.
+          ¡Únete a nosotros en DevFest Huancayo y sé parte de la innovación
+          tecnológica en nuestra región!
+          <br />
+          <br />
+          <a href="https://devfest.huancayo.dev/"> <b>Inscríbete aquí </b> </a>
+        </p>
+      </div>
     </div>
     <!-- SCROLL REVEAL (JAVASCRIPT) -->
     <script src="https://unpkg.com/scrollreveal"></script>
