--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           Encuentra la mejor y más nueva información acerca de este maravilloso
           mundo de la programación en Huancayo, Perú y el MUNDO.
         </p>
-        <a class="btn" href="#"
+        <a class="btn" href="acercade.html"
           >Leer más <i class="fas fa-angle-double-right"></i
         ></a>
       </header>
@@ -80,7 +80,9 @@
             Internet Archive ha sido hackeado, dejando inaccesibles millones de
             páginas web, bibliotecas y archivos históricos.
           </p>
-          <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
+          <a href="noticias.html#internetarchive"
+            >Leer más <i class="fas fa-angle-double-right"></i
+          ></a>
         </div>
         <div>
           <img src="./img/cleancode.jfif" alt="Clean Code" />
@@ -124,7 +126,9 @@
             plataforma Web.dev de Google, cuenta con la experiencia de tutores
             avanzados.
           </p>
-          <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
+          <a href="noticias.html#google-espia"
+            >Leer más <i class="fas fa-angle-double-right"></i
+          ></a>
         </div>
         <div>
           <img src="./img/googleincognito.avif" alt="Google Espía" />
@@ -134,7 +138,9 @@
             Modo Incógnito y fué multada con 5.100 millones de euros, ¿Estás
             Seguro?
           </p>
-          <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
+          <a href="noticias.html#google-espia"
+            >Leer más <i class="fas fa-angle-double-right"></i
+          ></a>
         </div>
         <div>
           <img src="./img/css4-5.jpg" alt="CSS4 Y CSS5" />
@@ -202,12 +208,14 @@
           <li>
             <a href="#"><h3>Noticias</h3></a>
           </li>
-          <li><a href="#">Hackeo a Internet</a></li>
-          <li><a href="#">Google te espía</a></li>
-          <li><a href="#">Google borra Adblockers</a></li>
-          <li><a href="#">Windows 10 morirá</a></li>
-          <li><a href="#">HarmonyOS Next</a></li>
-          <li><a href="#">Firefox y su seguridad</a></li>
+          <li><a href="noticias.html#internetarchive">Hackeo a Internet</a></li>
+          <li><a href="noticias.html#google-espia">Google te espía</a></li>
+          <li>
+            <a href="noticias.html#google-adblock">Google borra Adblockers</a>
+          </li>
+          <li><a href="noticias.html#windows10">Windows 10 morirá</a></li>
+          <li><a href="noticias.html#HarmonyOS">HarmonyOS Next</a></li>
+          <li><a href="noticias.html#Firefox">Firefox y su seguridad</a></li>
         </ul>
         <ul>
           <li>
