--- a/noticias.html
+++ b/noticias.html
@@ -47,7 +47,120 @@
       </nav>
       <hr />
       <h1 class="text-center">NOTICIAS DEV</h1>
-    </div>
+          <div class="box-article" id="internetarchive">
+            <img src="img/internetarchiveportada.webp" alt="Noticia Internet Archive" class="article-image" />
+            <h3 class="article-title">El archivo de internet ha sido hackeado: el ciberataque se alarga tres días aunque no afectaría a los datos</h3>
+            <p class="article-description">
+              El mayor archivo de la historia de internet está caído o lleva varios días sufriendo problemas por culpa de un ciberataque. Si quieres sabes cómo era la tienda de Apple cuando se inauguró, este es el portal en el que puedes encontrar ese recuerdo. Sin embargo, un hackeo DDoS estaría saturando sus servidores impidiendo que funcionen con normalidad desde el domingo. Este tipo de ataques son frecuentes también contra empresas e instituciones de España.
+              <br>
+              <br>
+
+              Según las explicaciones que ha dado esta organización a través de sus redes sociales, los ataques comenzaron durante el fin de semana. Aseguran estar bajo un ataque DDoS: "los datos no se han visto afectados, pero la mayoría de los servicios no están disponibles".
+              <br>
+              <br>
+              Internet Archive o Wayback Archive es una inmensa librería sin ánimo de lucro que registra el historial de Internet hasta la fecha; la biblioteca de la red de redes. Es un gigantesco archivo con el historial de más de 866.000 millones de páginas y sus diferentes evoluciones.
+              Los DDoS o ataques de denegación de servicio, se orientan a sistemas y redes de ordenadores y consisten en generar grandes flujos de información desde varios puntos de conexión (usualmente, ordenadores hackeados o redes de bots) y así hacer colapsar dichos sistemas. Aunque son más laboriosos, ofrecen más ventajas.
+              <br><br>
+              No necesitan que el atacante se introduzca previamente en el sistema o que use un punto de apoyo dentro de la red objetiva. Además, se necesita de un componente social que implique que un empleado cometa un error y permita a los atacantes entrar al sistema.
+              
+            </p>
+          </div>
+            <a href="index.html" class="btn-return ">
+    <i class="fas fa-arrow-left"></i> Volver a Inicio
+</a>
+
+          <div class="box-article" id="google-espia">
+            <img src="img/googleincognito.avif" alt="Google te espía" class="article-image" />
+            <h3 class="article-title">Google también te espía al navegar en Chrome con modo incógnito, pero lo puedes evitar</h3>
+            <p class="article-description">
+              Google Chrome cuenta con un modo incógnito, igual que en el resto de navegadores. ¿Su función? Permitirnos navegar de forma privada, ya que al cerrar cualquier pestaña, los datos que se hayan registrado se eliminarán para siempre. Pero mucho nos tememos que es así.
+              <br><br>
+Sí, Google confirma lo que todos sabíamos: te espía cuando usas el Modo Incógnito. Al punto de que la compañía con sede en Mountain View acaba de ser multada con 5.100 millones de euros por incumplir con la normativa de privacidad del Modo Incógnito.
+<br><br>
+De esta manera, Google seguía rastreando a los usuarios, al punto de que se estima que la gran G puede acceder al 94% de los sitios webs que ha visitado el usuario, viendo cookies y otros datos independientemente del modo incógnito.
+Sin revelarse aún la identidad de los atacantes ni el objetivo que estos persiguen con su actividad, los ataques se han sucedido durante varios días. Si el lunes por la tarde el portal se había recuperado, el martes por la mañana volvía a presentar fallos. "Desde que comenzaron los ataques el domingo, la intrusión DDoS ha lanzado decenas de miles de solicitudes de información falsa por segundo. Se desconoce el origen del ataque", afirman en un comunicado emitido este martes 28 de mayo. No hay actualización desde entonces.
+<br><br>
+No es la primera vez que sufre un problema grave. El año pasado sufrió una caída, y desde el perfil de Twitter de la web se afirmaba que el posible causante era una compañía de IA usando sus archivos para entrenamiento. Lo que se traduce también como un tráfico excesivo que sus servidores no pudieron soportar.
+            </p>
+          </div>
+            <a href="index.html" class="btn-return ">
+    <i class="fas fa-arrow-left"></i> Volver a Inicio
+</a>
+
+          <div class="box-article" id="google-adblock">
+            <img src="img/googleadblock.jpg" alt="Google Adblock" class="article-image" />
+            <h3 class="article-title">Google a por los adblock: elimina uBlock</h3>
+            <p class="article-description">
+              Cada vez que navegamos en Internet vamos a tener que lidiar con un montón de anuncios y publicidad prácticamente en todas las páginas y sitios web que visitemos. No importa si es un foro, una web de noticias, una plataforma donde se suben vídeos, la gran mayoría va a tener anuncios en mayor o menor medida. Con Adblock y otros bloqueadores de anuncios es posible saltarnos gran parte de esta publicidad, incluida la que tenemos en páginas como YouTube. Ahora bien, Google está dispuesta a acabar con todos los bloqueadores de publicidad que hay y hoy ha dado un duro golpe a la comunidad, ya que ha eliminado uBlock Origin de su Chrome Web Store.
+<br><br>
+Adblock es considerado el bloqueador de anuncios más popular, pues fue una de las primeras extensiones de navegador que se encargaba de básicamente lo que su nombre indica. Este ha sido instalado en decenas de millones de ordenadores en todo el mundo, pues como imaginarás, los anuncios son molestos y las personas van a buscar alternativas para evitarlos. A su vez, la publicidad es totalmente necesaria en las páginas web, pues muchas de estas dependen de ella para generar ingresos.
+<br><br>
+Si bien el uso de Adblock no era algo precisamente ilegal, era un tema bastante controvertido, pero nunca llegaron a existir leyes que lo prohibieran totalmente. Es por ello que Google se puso manos a la obra para poder realizar un cambio que acabaría con este tipo de extensiones. Fue en 2023 cuando ya se avisó de que la compañía iba a dejar obsoletos los adblock con Manifest V3, pero no sería hasta 2024 cuando esto ocurriría. Ahora parece que estamos cerca de que este día llegue, pues han empezado a salir advertencias de varias extensiones e incluso algunas ya han desaparecido.
+<br><br>
+La extensión que más nos ha llamado la atención es uBlock Origin, pues este adblock era considerado el mejor de todos capaz de poder bloquear incluso la publicidad de YouTube cuando otros fracasaban en el intento. Ahora si buscamos por uBlock Origin en la Chrome Web Store, nos encontraremos con un mensaje que indica que la extensión ya no está disponible porque "no cumple con las mejores prácticas para las extensiones de Chrome". Si la tenías instalada y vas a buscarla, te encontrarás con un mensaje distinto que indica que pronto dejará de ser compatible con el navegador Chrome.
+            </p>
+          </div>
+            <a href="index.html" class="btn-return ">
+    <i class="fas fa-arrow-left"></i> Volver a Inicio
+</a>
+
+          <div class="box-article" id="windows10">
+            <img src="img/windows10.jpg" alt="Windows 10 morirá" class="article-image" />
+            <h3 class="article-title">Windows 10 morirá dentro de un año</h3>
+            <p class="article-description">
+              Por primera vez en la historia es una de las más grandes compañías del mundo la que tiene un problema, y bien gordo. Windows 10 ha supuesto un estándar de calidad, rendimiento y soporte que, por diversos motivos, son distintos, pero todo ello se termina un día como hoy dentro de un año, ya que el 15 de octubre de 2025 morirá. Windows 11 tendrá la responsabilidad de contentar, mantener y cuidar las máquinas de millones de usuarios que niegan el cambio, mientras otros tendrán que comprar hardware nuevo. ¿Va a ser 2025 un año bastante caótico en el mundo de PC?
+<br><br>
+Un día como hoy, dentro de lo que será 2025, tendremos algo inédito en la historia del software y los SO. El 15 de octubre de dicho año Microsoft terminará con el soporte para millones de PC que se resisten a cambiar, que se resisten a dar el paso a la última versión de los de Redmond, y el problema es que muchos de ellos tienen motivos más que de sobra.
+No es un drama, ni mucho menos, pero muchos tienen claro que no van a volar, y no les falta razón. Microsoft ha lanzado su nuevo SO en el periodo de tiempo más corto de la historia para un Sistema Operativo que ha encantado a propios y extraños por su fiabilidad, rendimiento y soporte. Solamente la metedura de pata de los de Redmond les obligó a sacar un nuevo SO en ese tiempo, pero con Windows 10 no es el caso, pero aun así morirá en un año.
+<br><br>
+Teniendo en cuenta, según los datos que vimos hace unos meses y los actualizados, que Windows 11 apenas ha subido en cuota de mercado pese a venderse en portátiles preinstalado, y que el grueso del mismo lo sigue manteniendo Windows 10 con más de dos tercios del total, ¿de verdad está preparada Microsoft para un cambio de usuarios tan grande que les coseche millones de críticas a nivel mundial?
+<br><br>
+No lo está, y Windows 11 24H2 sigue dando problemas, el último lo hemos visto esta misma mañana. Tienen un año para mejorar soporte, estabilidad y rendimiento, todos ellos en tela de juicio por muchos, hasta el punto de que Windows 11 parece un favor para Linux, que sigue ganando poco a poco adeptos cansados de Microsoft. En cambio, otros están bien con lo último de los de Redmond, incluso los hay contentos tras 24H2 con el aumento de rendimiento en juegos.
+            </p>
+          </div>
+            <a href="index.html" class="btn-return ">
+    <i class="fas fa-arrow-left"></i> Volver a Inicio
+</a>
+
+           <div class="box-article" id="HarmonyOS">
+            <img src="img/harmonyOS.jpg" alt="HarmonyOS Next" class="article-image" />
+            <h3 class="article-title">HarmonyOS Next, el final de Android en los dispositivos de Huawei, ya tiene fecha</h3>
+            <p class="article-description">
+              HarmonyOS Next, el principio del fin de Android en los dispositivos móviles de Huawei, ya tiene fecha de lanzamiento: el 22 de octubre. Según los informes, este sistema operativo debutaría con su nueva serie de dispositivos Huawei Nova 13.
+              <br><br>
+
+HarmonyOS Next es el resultado final de las ambiciones de Huawei a nivel de software. Y para ello significa abandonar el proyecto de código abierto Android (AOSP) y el soporte para aplicaciones Android en favor de su propio código y aplicaciones nativas. Para que todo vaya como la seda desde su lanzamiento, ya existía una versión de este OS para desarrolladores en verano. Por su parte, la división de software de Huawei ha estado muy ocupada con el desarrollo de un ecosistema de aplicaciones y servicios para dar la bienvenida a los usuarios. Y es que de nada sirve lanzar un nuevo OS si los usuarios no encuentran las aplicaciones que utilizan asiduamente.
+HarmonyOS Next debutará así con más de 10.000 aplicaciones, algo crucial para su éxito en el lanzamiento. A nivel de diseño lo ha hecho muy bien Huawei. Y es que HarmonyOS Next luce visualmente de forma idéntica al actual HarmonyOS. La única diferencia está bajo el capó. Siendo visualmente idéntico pero sin la facultad de correr el código de Android ni las aplicaciones diseñadas para este sistema operativo. HarmonyOS Next recurre a un microkernel diseñado por la propia Huawei basado en el núcleo de código abierto OpenHarmony.
+<br><br>
+Este sistema operativo admite aplicaciones a través de Ark Compiler con Huawei Mobile Services (HMS), y promete una arquitectura unificada sin fisuras entre los dispositivos HarmonyOS Next y la nube. Así como interconectividad entre diversos factores de forma de los dispositivos. De esta forma, es lógico de esperar que HarmonyOS Next se expanda en el futuro a ordenadores portátiles. Básicamente, Huawei replicará todos los pasos de Apple. Construyendo así sus propios dispositivos y todo ello ligado a un software desarrollado por la propia compañía.
+<br><br>
+Según las filtraciones, HarmonyOS Next debutará en los smartphones Huawei Nova 13, Nova 13 Pro, y Nova 13 Ultra. Dispositivos que lleguen con el mismo SoC Kirin 9010 utilizado en los Huawei Pura 70.
+              </p>
+          </div>
+            <a href="index.html" class="btn-return ">
+    <i class="fas fa-arrow-left"></i> Volver a Inicio
+</a>
+
+          <div class="box-article" id="Firefox">
+            <img src="img/firefoxsecurity+.jpg" alt="Firefox y su seguridad" class="article-image" />
+            <h3 class="article-title">¿Usas Firefox? Pues una vulnerabilidad crítica permite a un atacante tomar el control de tu navegador, inyectar código malicioso o robar datos</h3>
+            <p class="article-description">
+              La vulnerabilidad ha sido identificada y calificada como CVE-2024-9680 y su puntuación en CVSS es de 9,8, así que es gravísima, crítica de hecho. La propia Mozilla ha dado una explicación breve que a continuación desgranaremos cuando veamos la definición de la vulnerabilidad en su CVE:
+<br></br>
+"Un atacante logró ejecutar código en el proceso de contenido explotando un uso posterior a la liberación en las líneas de tiempo de animación" se puede leer desde la explicación de la vulnerabilidad.
+<br><br>
+Esto que puede parecer complicado de entender y algo técnico se puede explicar de una manera más simple. Firefox, como muchos navegadores actuales, utiliza lo que en software se llama como arquitectura multiproceso (multiprocess architecture), donde esta está dividida en varios de estos procesos.
+<br></br>
+El proceso de contenido citado por Mozilla para Firefox es una parte fundamental y crítica del navegador y está separada de lo que se conoce como proceso principal, donde hay partes clave, pero menos críticas en cuanto a seguridad se refiere como la interfaz de usuarios, por ejemplo. Esto se hace así para mejorar la estabilidad y seguridad, puesto que se pueden actualizar módulos más pequeños, o repararlos, o parchearlos, de forma más rápida.
+<br><br>
+Además, para su análisis de seguridad también es más sencillo. Podríamos decir que un navegador web TOP a día de hoy está hecho en módulos más pequeños, partes de un todo, donde si una está afectada el resto puede seguir funcionando y siendo segura.
+              </p>
+          </div>
+          <a href="index.html" class="btn-return ">
+    <i class="fas fa-arrow-left"></i> Volver a Inicio
+</a>
+
+
     <!-- SCROLL REVEAL (JAVASCRIPT) -->
     <script src="https://unpkg.com/scrollreveal"></script>
     <!-- CUSTOM JS -->
